
syntax = "proto3";
import "google/protobuf/timestamp.proto";
package auth;

service AuthService {
    rpc CreateUser(CreateUserDto) returns (User) {}
    rpc FindAllUser(Empty) returns (Users) {}
    rpc FindOneUser(FindOneUserDto) returns (User) {}
    rpc UpdateUser(UpdateUserDto) returns (User) {}
    rpc RemoveUser (FindOneUserDto) returns (User) {}
    rpc Login (LoginRequestDto) returns (LoginResponseDto);
    rpc Register (RegisterRequestDto) returns (RegisterResponseDto);
    rpc ForgotPassword (ForgotPasswordRequestDto) returns (ErrorResponseDto);
    rpc RefreshToken(RefreshTokenRequestDto)  returns (LoginResponseDto);
}  

message RefreshTokenRequestDto {
    string refreshToken = 1;
}

message LoginRequestDto {
    string username = 1;
    string password = 2;
}
message RegisterRequestDto {
    string username = 1;
    string email = 2;
    string password = 3;
}
message ForgotPasswordRequestDto {
    string email = 1;
}
message RegisterResponseDto { 
    string username = 1;
    string email = 2;

}
message LoginResponseDto {
    string accessToken = 1;
    string refreshToken = 2;
}
message ErrorResponseDto {
    string error_message = 1;
}

message UpdateUserDto{
    string username = 1;
    string email = 2;
    string password = 3;
    string due_date = 4;
}

message FindOneUserDto {
    string id = 1;
}
message CreateUserDto {
    string username = 2;
    string email = 3;
    string password = 4;
}
message Empty {};

message Users {
    repeated User users = 1;
}
message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string refreshToken=5;
    google.protobuf.Timestamp created_at = 6;

}
